# flame

./: .gitignore  CMakeLists.txt  CMakePresets.json
Application/: Application.cpp  CMakeLists.txt  Initialization.cpp
Application/Includes/Application/: Application.hpp
Bootstrap/: Bootstrap.cpp  CMakeLists.txt  Initialization.cpp
Bootstrap/Darwin/: Initialization_Darwin.cpp
Bootstrap/Includes/Bootstrap/: Bootstrap.hpp  Initialization.hpp
Bootstrap/Includes/Interfaces/Application/: IApplication.hpp
Bootstrap/Windows/: Initialization_Windows.cpp
